tests/ui/cve/cve_2020_35886/cve_2020_35886.regular.stderr
error: public function `zero` allocates a pointer that may be zero-sized, which is an undefined behavior
  --> tests/ui/cve/cve_2020_35886/cve_2020_35886.rs:27:28
   |
LL |     pub fn zero(size: usize) -> Self {
   |                 ---- size passed in here
...
LL |         let ptr = unsafe { alloc_zeroed(layout) as *mut T };
   |                            ^^^^^^^^^^^^^^^^^^^^ pointer created here
   |
   = note: See https://doc.rust-lang.org/std/alloc/fn.alloc_zeroed.html and https://doc.rust-lang.org/std/alloc/trait.GlobalAlloc.html#method.alloc_zeroed
   = note: `#[deny(rpl::alloc_maybe_zero)]` on by default

error: aborting due to 1 previous error

